src/test/ui/lub-glb/old-lub-glb-object.stderr
error[E0308]: match arms have incompatible types
  --> $DIR/old-lub-glb-object.rs:20:13
   |
20 |       let z = match 22 { //~ ERROR incompatible types
   |  _____________^
21 | |         0 => x,
22 | |         _ => y,
   | |              - match arm with an incompatible type
23 | |     };
   | |_____^ expected bound lifetime parameter 'a, found concrete lifetime
   |
   = note: expected type `&for<'a, 'b> Foo<&'a u8, &'b u8>`
              found type `&for<'a> Foo<&'a u8, &'a u8>`
   = note: this was previously accepted by the compiler but has been phased out
   = note: for more information, see https://github.com/rust-lang/rust/issues/45852

error: aborting due to previous error

